--- a/style.css
+++ b/style.css
@@ -141,14 +141,16 @@ input[type="password"],
 input[type="number"],
 input[type="date"],
 select {
-  padding: 12px;
-  margin-bottom: 20px;
+  padding: 14px 16px;
+  margin-bottom: 28px;
+  margin-top: 8px;
   border-radius: 6px;
   border: 1px solid #ccc;
   font-size: 16px;
   width: 100%;
   box-sizing: border-box;
 }
+
 
 button {
   padding: 14px;
